# Arcana

./: .gitignore  README.md  optional_name.text
arcana_tui/: Cargo.toml
arcana_tui/src/: app.rs  approval.rs  banner.rs  behavioral.rs  cli.rs  composer.rs  config.rs  diff_panel.rs  event.rs  highlight.rs  instruction.rs  llm.rs  main.rs  onboard.rs  overlay.rs  panels.rs  render_md.rs  status_bar.rs  theme.rs  tui.rs  types.rs  viewport.rs
authority_and_record/: Cargo.toml
authority_and_recording/src/: main.rs  prompt.rs  record.rs  server.rs  types.rs
doc/: agent_running_design.md  agent_usage.md  authority_and_recording_design.md  human_in_loop_design.md  tui_design.md
human_in_loop_interaction/: Cargo.toml
human_in_loop_interaction/src/: config.rs  diff_review.rs  lib.rs  session.rs  types.rs
memory_system/: Cargo.toml
memory_system/src/: cli.rs  config.rs  embedding.rs  lib.rs  manager.rs  store.rs  types.rs
skills_modules/: Cargo.toml
skills_modules/src/: daemon.rs  lib.rs  manifest.rs  trigger_db.rs  types.rs
subagent_system/: Cargo.toml
subagent_system/src/: checkpoint.rs  lib.rs  orchestrator.rs  types.rs
