[package]
name = "arcana-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1.6"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-native"] }
zerocopy = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
toml = "0.8"
