[package]
name = "arcana-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1.6"
zerocopy = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
glob-match = "0.2"
thiserror = "2"
dirs = "6"
